Overlap on slides fixed, and images uploaded for recipe cards

--- a/src/global.css
+++ b/src/global.css
@@ -5,7 +5,6 @@ body {
   box-sizing: border-box;
   width: 100%;
   overflow-x: hidden;
-  background-color: #ffffff; /* Or whatever color you want */
 }
 @keyframes pop-in {
   0% {
